--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "npm run lint -- --fix",
+    "prettier:fix":"prettier src/**/*.ts --write",
+    "prettier":"prettier src/**/*.ts --check",
     "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
