--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "author": "Mohan Lal<lmohan717@gmail.com>",
   "license": "ISC",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "tsc && npx tsc-alias",
+    "start": "NODE_ENV=production node dist/server.js --trace-warnings",
+    "build": "tsc -p . && npx tsc-alias",
+    "production": "yarn build && yarn start",
+    "development": "cross-env NODE_ENV=development nodemon",
     "test": "jest --forceExit --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "yarn lint -- --fix",
     "prettier:fix": "prettier src/**/*.ts --write",
     "prettier": "prettier src/**/*.ts --check",
-    "deploy:prod": "npm run build && pm2 start ecosystem.config.js --only prod",
+    "deploy:prod": "yarn build && pm2 start ecosystem.config.js --only prod",
     "deploy:dev": "pm2 start ecosystem.config.js --only dev"
   },
   "dependencies": {
@@ -24,23 +25,19 @@
     "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "envalid": "^7.1.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
-    "jest": "^27.0.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
     "pm2": "^5.1.0",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
-    "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
-    "typescript": "^4.3.5",
+    "typescript": "^4.5.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
@@ -66,16 +63,20 @@
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
+    "cross-env": "^7.0.3",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
+    "jest": "^27.4.5",
     "lint-staged": "^11.0.0",
     "node-config": "^0.0.2",
     "node-gyp": "^8.1.0",
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
+    "ts-jest": "^27.1.2",
+    "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.10.1"
   }
 }
