--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "lint": "eslint --ignore-path .gitignore --ext .ts src/",
     "lint:fix": "yarn lint -- --fix",
     "prettier:fix": "prettier src/**/*.ts --write",
-    "prettier": "prettier src/**/*.ts --check",
-    "deploy:prod": "yarn build && pm2 start ecosystem.config.js --only prod",
-    "deploy:dev": "pm2 start ecosystem.config.js --only dev"
+    "prettier": "prettier src/**/*.ts --check"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -34,7 +32,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
-    "pm2": "^5.1.0",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
     "typescript": "^4.5.4",
