--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.gitsecret/keys/random_seed
+!*.secret
+configs/*.json
+build.sh
+*.out
