--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "envalid": "^7.1.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
@@ -32,9 +31,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
-    "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^4.1.6",
-    "typescript": "^4.5.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
@@ -44,7 +40,6 @@
     "@types/config": "^0.0.39",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.11",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/helmet": "^4.0.0",
@@ -72,8 +67,11 @@
     "nodemon": "^2.0.9",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0",
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.10.1"
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.5.4"
   }
 }
