--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,9 @@
 steps:
   - name: gcr.io/cloud-builders/docker
-    args:
-      - build
-      - '--no-cache'
-      - '--build-arg'
-      - 'GPG_PRIVATE_KEY=$$GPG_PRIVATE_KEY'
-      - '-t'
-      - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
-      - .
-      - '-f'
-      - Dockerfile
+    entrypoint: bash
+    args: ['-c', 'docker build . -t $_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA --build-arg GPG_PRIVATE_KEY="$$GPG_KEY"'] 
     id: Build
-    secretEnv: ['GPG_PRIVATE_KEY']
+    secretEnv: ['GPG_KEY']
   - name: gcr.io/cloud-builders/docker
     args:
       - push
@@ -34,7 +26,7 @@ steps:
 availableSecrets:
   secretManager:
   - versionName: projects/405983975678/secrets/GPG_CICD_KEY/versions/latest
-    env: 'GPG_PRIVATE_KEY'
+    env: GPG_KEY
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$COMMIT_SHA'
 options:
