--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
     "winston": "^3.3.3",
